# mulkup

./: .ghcid  .gitignore  README.adoc  cabal.project  config.example.dhall  default.nix  flake.nix  hie.cabal.yaml  hie.stack.yaml  hie.yaml  mulkup.cabal  shell.nix  stack.yaml
src/Mulkup/: Bupstash.hs  Config.hs  Flags.hs  Logging.hs  Main.hs  Prelude.hs  Ranking.hs
test/: Main.hs
test/Mulkup/: ConfigSpec.hs
