cabal-version:      3.0
name:               mulkup
version:            0.1.0.0
license:            NONE
copyright:          2021 Matthias Andreas Benkard
maintainer:         code@mail.matthias.benkard.de
author:             Matthias Andreas Benkard


common shared-properties
  default-language: Haskell2010
  -- tested-with:
  --     GHC == 9.0.1

  build-depends:
    , base
    , relude
    , aeson
    , bytestring
    , co-log
    , co-log-core
    , co-log-polysemy
    , containers
    , dhall
    , optparse-applicative
    , optics
    , polysemy
    , recursion-schemes
    , time
    , text
    , turtle

  default-extensions:
      BangPatterns
      BinaryLiterals
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      DerivingStrategies
      DoAndIfThenElse
      EmptyDataDecls
      EmptyDataDeriving
      ExistentialQuantification
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTSyntax
      GADTs
      GeneralizedNewtypeDeriving
      InstanceSigs
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      OverloadedLabels
      PartialTypeSignatures
      PatternGuards
      PolyKinds
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeSynonymInstances
      ViewPatterns

  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies
      -Wpartial-fields
      -Wredundant-constraints
      -fprint-explicit-foralls
      -fprint-unicode-syntax


library
  import:           shared-properties
  default-language: Haskell2010

  exposed-modules:
      Mulkup.Bupstash
      Mulkup.Config
      Mulkup.Flags
      Mulkup.Logging
      Mulkup.Main
      Mulkup.Prelude

  hs-source-dirs:
      src


executable mulkup
  import:           shared-properties
  default-language: Haskell2010
  main-is:          Main.hs

  hs-source-dirs:
      src/bin

  build-depends:
    , mulkup


test-suite mulkup-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:
      Mulkup.ConfigSpec

  build-depends:
    , base
    , tasty
    , tasty-hunit
    , tasty-smallcheck
    , mulkup
